# iptv-aggregator

./: .copilot-instructions.md  .gitignore  EPG_README.md  ERROR_HANDLING.md  Makefile  PULLRUN.md  QUICK_TEST.md  README.md  TAXONOMY_README.md  demo.py  demo_real_epg.py  full_pipeline.py  pullrun.sh  pyproject.toml  requirements.txt
.github/: README.md  copilot-error-handler.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-merge.yml  build-dataset.yml  demo.yml  error-handler.yml  load-iptv-org-data.yml  load-portal-data.yml  real-epg.yml  schedule.yml  sync.yml  test.yml  validate-dataset.yml
docs/: AUTO_MERGE.md  DATABASE_GUIDE.md  EPG_GUIDE.md  IPTVPORTAL_INTEGRATION.md  SYNC_SCHEDULE.md
migrations/: 001_create_channel_variants.sql
output/: README.md  advanced_fuzzy_matching.py  dump_tv_channel.py  metadata.json  playlist.m3u  playlist_with_epg.m3u  production_fuzzy_matching_v2.py
scripts/: download_epg.py  dump_tv_channel_simple.py  extract_tvg_country.py  generate_channel_stats.py  generate_m3u_with_epg.py  migrate_taxonomy.py  parse_epg_pydantic.py
src/: __init__.py  iptv_api.py  models.py
src/epg/: grabber.py
src/loaders/: __init__.py  iptv_org.py
src/matchers/: iptvportal_integration.py
src/taxonomy/: __init__.py  channel_parser.py  hierarchy.py
stats/: channels_20251224_092954.json  channels_20251224_093222.json  channels_20251224_093356.json  channels_20251224_093414.json  channels_latest.json
tools/: build_master_dataset.py  channel_normalizer.py  check_iptvportal_session.py  fuzzy_channel_matcher.py  generate_report.py  iptvportal_loader.py  validate_dataset.py
