[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iptv-aggregator"
version = "0.1.0"
description = "Multi-source IPTV aggregator with Python EPG grabber"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "pv-udpv"}]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.5",
    "lxml>=5.1",
    "sqlalchemy>=2.0",
    "rapidfuzz>=3.5",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true